Added users and more login
