# models/blogpost.js
@@ -1,10 +1,5 @@
 const mongoose = require('mongoose');
 
-const sectionSchema = mongoose.Schema({
-  heading: String,
-  paragraphs: [String],
-});
-
 const commentSchema = mongoose.Schema({
   commentDate: Date,
   commentBody: String,
@@ -13,7 +8,7 @@ const commentSchema = mongoose.Schema({
 const blogPostSchema = mongoose.Schema({
   title: String,
   creationDate: Date,
-  sections: [sectionSchema],
+  content: String,
   comments: [commentSchema],
 });
 
